Homes setup and oauth fix
